--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
     <div class="main">
       <div id="abtme" class="aboutme">
         <div class="imgAlex">
-          <img
-            src="/Pictures/FotoAlexandre.jpg"
-            alt="Foto de Alexandre Gomes"
-          />
+          <img src="https://ibb.co/Dt6YKsW" alt="Foto de Alexandre Gomes" />
         </div>
 
         <div class="textAboutme">
