--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <div class="main">
       <div id="abtme" class="aboutme">
         <div class="imgAlex">
-          <img src="https://ibb.co/Dt6YKsW" alt="Foto de Alexandre Gomes" />
+          <img
+            src="https://i.ibb.co/7XTQy8C/Foto-Alexandre.jpg"
+            alt="Foto de Alexandre Gomes"
+          />
         </div>
 
         <div class="textAboutme">
