--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
-    <title>Site Pessoal</title>
+    <title>Personal Website</title>
   </head>
   <body>
     <div class="navbar">
       <a href="#abtme">About me</a>
-      <a href="curriculum.html">Curriculum</a>
-      <a href="projetos.html">Projects</a>
+      <a href="#curr">Curriculum</a>
+      <a href="#prjs">Projects</a>
     </div>
 
     <div class="main">
@@ -19,7 +19,7 @@
         <div class="imgAlex">
           <img
             src="https://i.ibb.co/7XTQy8C/Foto-Alexandre.jpg"
-            alt="Foto de Alexandre Gomes"
+            alt="Photo of Alexandre Gomes"
           />
         </div>
 
@@ -34,6 +34,80 @@
             them in my projects.
           </p>
           <button>Contacts</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="main2">
+      <div id="curr" class="curriculum">
+        <div class="titleCurr">
+          <h1>Curriculum</h1>
+        </div>
+        <div class="centerLine"></div>
+        <div class="eduCurr">
+          <br />
+          <h1>Education</h1>
+        </div>
+        <div class="schools">
+          <h4>2020-Present</h4>
+          <h3>Instituto Superior de Engenharia do Porto</h3>
+          <img src="https://i.ibb.co/Jjy7qVv/logoIsep.png" alt="ISEP Icon" />
+          <p>Pursuing a degree in Systems Engineering.</p>
+          <hr />
+          <h4>2017-2020</h4>
+          <h3>Escola Secundária da Boa Nova</h3>
+          <img
+            src="https://i.ibb.co/5v52S84/Logo-Boa-Nova.png"
+            alt="Escola Secundária da Boa Nova Icon"
+          />
+          <p>Completed highschool in Science and Technology.</p>
+        </div>
+
+        <br />
+
+        <div class="centerLine2"></div>
+        <div class="expCurr">
+          <br />
+          <h1>Professional Experience</h1>
+        </div>
+        <div class="proExp">
+          <h3>None</h3>
+          <img src="https://i.ibb.co/syZrVcw/iconWork.png" alt="Work Icon" />
+          <p>Looking forward to future opportunities.</p>
+        </div>
+
+        <br />
+
+        <div class="centerLine3"></div>
+        <div class="skillsCurr">
+          <br />
+          <h1>Skills</h1>
+        </div>
+        <div class="skills">
+          <img
+            src="https://i.ibb.co/NZK0T1t/progLogo.png"
+            alt="Programming Languages Icon"
+          />
+          <button>HTML</button>
+          <button>CSS</button>
+          <button>Java</button>
+          <button>Matlab</button>
+          <br /><br />
+          <img
+            src="https://i.ibb.co/PzFtfc7/microsoft-Logo.png"
+            alt="Microsoft Icon"
+          />
+          <button>Word</button>
+          <button>Excel</button>
+          <button>Powerpoint</button>
+          <button>Project</button>
+          <br /><br />
+          <img
+            src="https://i.ibb.co/37rf844/lingLogo.png"
+            alt="Languages Icon"
+          />
+          <button>Portuguese</button>
+          <button>English</button>
         </div>
       </div>
     </div>
