Projects and Footer

--- a/index.html
+++ b/index.html
@@ -110,6 +110,38 @@
           <button>English</button>
         </div>
       </div>
+      <br />
+    </div>
+
+    <div class="main3">
+      <div id="prjs" class="projects">
+        <div class="titlePrjs">
+          <h1>Projects</h1>
+        </div>
+        <div class="projs">
+          <a
+            href="https://alexgomess.github.io/AlexandreGomes/"
+            target="_blank"
+          >
+            <img
+              id="ima"
+              src="https://i.ibb.co/3z2m1Fs/portf.jpg"
+              alt="Personal Portfolio"
+            />
+          </a>
+          <p>Personal Portfolio</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <a
+        href="https://www.linkedin.com/in/alexandre-gomes-5a9809227/"
+        target="_blank"
+        >LinkedIn</a
+      >
+      <a href="mailto:alexandregomeswork@gmail.com" target="_blank">Gmail</a>
+      <a href="https://github.com/AlexGomess" target="_blank">GitHub</a>
     </div>
   </body>
 </html>
