--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h1>Alexandre Gomes</h1>
           <p>
             I'm a 19 years old university student, residing in São Romão do
-            Coronado and currently studying Systems Enginnering at Instituto
+            Coronado and currently studying Systems Engineering at Instituto
             Superior de Engenharia do Porto. <br /><br />
             With an interest in front-end development, I'm willing to learn more
             about the current tools used in the market and be able to master
