--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             about the current tools used in the market and be able to master
             them in my projects.
           </p>
-          <button>Contacts</button>
+          <a href="#ftr" class="button">Contacts</a>
         </div>
       </div>
     </div>
@@ -134,7 +134,7 @@
       </div>
     </div>
 
-    <div class="footer">
+    <div id="ftr" class="footer">
       <a
         href="https://www.linkedin.com/in/alexandre-gomes-5a9809227/"
         target="_blank"
