--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
         <div class="projs">
           <a
-            href="https://alexgomess.github.io/AlexandreGomes/"
+            href="https://alexgomess.github.io/Personal-Portfolio/"
             target="_blank"
           >
             <img
