--- a/newsite.html
+++ b/newsite.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://i.ibb.co/86mKY8p/Vers-o-Final-png.png"
+    />
     <link rel="stylesheet" href="newsite.css" />
     <title>Personal Portfolio</title>
   </head>
@@ -78,6 +83,7 @@
       </div>
     </div>
     <br />
+
     <footer id="footerID" class="footer">
       <a
         href="https://www.linkedin.com/in/alexandre-gomes-5a9809227/"
@@ -101,5 +107,11 @@
       <p id="footer-copyright">© 2022</p>
       <br />
     </footer>
+    <img
+      src="https://i.ibb.co/Z1TgCfL/arrow.png"
+      onclick="topFunction()"
+      id="returnTop"
+    />
+    <script src="newsite.js"></script>
   </body>
 </html>
