--- a/newsite.html
+++ b/newsite.html
@@ -15,13 +15,13 @@
 
   <body>
     <div class="navbar" id="topnav">
-      <a href="#abtme">About me</a>
-      <a href="#curr">Curriculum</a>
-      <a href="#prjs">Projects</a>
+      <a href="#aboutmeID">About me</a>
+      <a href="#curriculumID">Curriculum</a>
+      <a href="#projectsID">Projects</a>
     </div>
 
     <div class="flex-container">
-      <div class="aboutme">
+      <div id="aboutmeID" class="aboutme">
         <img
           src="https://i.ibb.co/7XTQy8C/Foto-Alexandre.jpg"
           alt="Photo of Alexandre Gomes"
@@ -38,7 +38,7 @@
         <a href="#footerID" class="button">Contacts</a>
       </div>
 
-      <div class="curriculum">
+      <div id="curriculumID" class="curriculum">
         <h1>Curriculum</h1>
         <br />
         <div class="education">
@@ -63,7 +63,7 @@
         </div>
       </div>
 
-      <div class="projetos">
+      <div id="projectsID" class="projects">
         <h1>Projects</h1>
         <br />
 
@@ -71,13 +71,13 @@
           href="https://alexgomess.github.io/Personal-Portfolio/"
           target="_blank"
         >
-          <figure class="projeto-1">
+          <figure class="project-1">
             <img
               src="https://i.ibb.co/3z2m1Fs/portf.jpg"
               alt="Personal Portfolio"
             />
 
-            <figcaption class="nome-projeto1">Personal Portfolio</figcaption>
+            <figcaption class="name-project1">Personal Portfolio</figcaption>
           </figure>
         </a>
       </div>
