--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         >
           <figure class="project-1">
             <img
-              src="https://i.ibb.co/3z2m1Fs/portf.jpg"
+              src="https://i.ibb.co/HnDG7SY/Vers-o-Final.png"
               alt="Personal Portfolio"
             />
 
