--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         <br />
         <div class="education">
           <h1>Education</h1>
+        </div>
+        <div class="line-container">
           <div class="vertical-line1"></div>
+        </div>
+        <div class="schools">
           <p class="years">2020-Present</p>
           <h2>Instituto Superior de Engenharia do Porto</h2>
           <br />
