--- a/index.html
+++ b/index.html
@@ -42,29 +42,53 @@
         <h1>Curriculum</h1>
         <br />
         <div class="education">
-          <h1>Education</h1>
+          <div class="leftside">
+            <h2>Education</h2>
+          </div>
+          <div class="rightside">
+            <p class="years">2020-2023</p>
+            <h3 id="isep">Instituto Superior de Engenharia do Porto</h3>
+            <p class="pr">Pursuing a degree in Systems Engineering.</p>
+            <br />
+            <hr />
+            <br />
+            <p class="years">2017-2020</p>
+            <h3 id="esbn">Escola Secundária da Boa Nova</h3>
+            <p class="pr">Completed highschool in Science and Technology.</p>
+          </div>
         </div>
-        <div class="line-container">
-          <div class="vertical-line1"></div>
+        <br /><br /><br /><br />
+        <div class="proExp">
+          <div class="leftside2">
+            <h2>Professional Experience</h2>
+          </div>
+          <div class="rightside2">
+            <h3>None</h3>
+            <p>Looking forward to future opportunities.</p>
+          </div>
         </div>
-        <div class="schools">
-          <p class="years">2020-Present</p>
-          <h2>Instituto Superior de Engenharia do Porto</h2>
-          <br />
-          <img src="https://i.ibb.co/Jjy7qVv/logoIsep.png" alt="ISEP Icon" />
-          <p id="pr">Pursuing a degree in Systems Engineering.</p>
-          <br />
-          <hr />
-          <br />
-          <p class="years">2017-2020</p>
-          <h2>Escola Secundária da Boa Nova</h2>
-          <br />
-          <img
-            src="https://i.ibb.co/5v52S84/Logo-Boa-Nova.png"
-            alt="ESBN Icon"
-          />
-          <p id="pr">Completed highschool in Science and Technology.</p>
+        <br /><br /><br /><br />
+
+        <div class="skills">
+          <div class="leftside3">
+            <h2>Skills</h2>
+          </div>
+          <div class="rightside3">
+            <button>HTML</button>
+            <button>CSS</button>
+            <button>Java</button>
+            <button>Javascript</button>
+            <button>R</button>
+            <button>Matlab</button>
+            <button>Word</button>
+            <button>Excel</button>
+            <button>Powerpoint</button>
+            <button>Project</button>
+            <button>Portuguese</button>
+            <button>English</button>
+          </div>
         </div>
+        <br />
       </div>
 
       <div id="projectsID" class="projects">
